# Qlib1

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Qlib1 项目与 PRD 对比评估.md  Qlib1_API_Documentation.md  Qlib1项目改进意见2.md  Qlib美股基本面分析系统PRD.md  pyproject.toml  requirements.txt  task.py  测试报告.md
.github/workflows/: ci-cd.yml
config/: qlib_config.yaml
deploy/k8s/: config.yaml  deployments.yaml  namespaces.yaml  network-policies.yaml
docker/: Dockerfile  docker-compose.yml
models/: .gitkeep
scripts/: benchmark.py  dump_bin.py  seed_db.py
src/analyzers/: __init__.py  accuracy_validator.py  adarnn_model.py  alpha_factors.py  double_ensemble_model.py  expression_engine.py  ml_pipeline.py  portfolio_strategy.py  qlib_ops_adapter.py  report_generator.py  tabnet_model.py
src/api/: __init__.py  main.py  middleware.py  ws.py
src/api/routes/: auth.py
src/collectors/: __init__.py  alpha_vantage.py  base.py  eodhd.py  intrinio.py  rate_limiter.py  sec_edgar.py
src/infrastructure/: __init__.py  cache_monitor.py  circuit_breaker.py  data_server.py  database.py  health_checker.py  models.py  performance.py  signal_exporter.py  trainer.py
src/models/: __init__.py  adarnn_model.py  double_ensemble_model.py  lightgbm_model.py  tabnet_model.py  xgboost_model.py
src/processors/: __init__.py  data_converter.py  feature_pipeline.py  pit_processor.py  qlib_native_converter.py
src/security/: __init__.py  auth.py  compliance.py  pm_gate.py  security.py
src/strategies/: __init__.py  topk_dropout.py
src/utils/: config.py  logger.py
src/workflow/: __init__.py  backtest_pipeline.py  data_ingestion_pipeline.py  feature_pipeline.py  runner.py  training_pipeline.py
tests/: conftest.py  test_t6_integration.py
tests/analyzers/: test_accuracy_validator.py  test_alpha_factors.py  test_expression_engine.py  test_ml_pipeline.py  test_portfolio_strategy.py  test_report_generator.py
tests/api/: conftest.py  test_api.py
tests/collectors/: __init__.py  conftest.py  test_alpha_vantage.py  test_api_key_rotator.py  test_eodhd.py  test_intrinio.py  test_rate_limiter.py  test_sec_edgar.py
tests/infrastructure/: test_chapter3_integration.py  test_chapter4_integration.py  test_circuit_breaker.py  test_data_server.py  test_health_checker.py  test_performance.py  test_signal_exporter.py  test_trainer.py
tests/integration/: test_e2e_pipeline.py
tests/processors/: test_data_converter.py  test_feature_pipeline.py  test_pit_processor.py
tests/security/: test_compliance.py  test_security.py
tests/workflow/: test_data_ingestion.py  test_runner.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/app/: globals.css
web/src/components/: ErrorBoundary.tsx  ProtectedRoute.tsx
(+41 files in other folders)
