[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlib-us-fundamental"
version = "0.1.0"
description = "基于Qlib框架的美股基本面量化分析系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Quant Team"}
]
keywords = ["quantitative-finance", "fundamental-analysis", "qlib", "machine-learning", "us-stocks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # === Qlib Core ===
    "pyqlib>=0.9.5",

    # === Data Processing ===
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "pyarrow>=14.0.0",

    # === Data Collection ===
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",

    # === Machine Learning ===
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "torch>=2.0.0",
    "pytorch-tabnet>=4.1.0",

    # === API & Web ===
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",

    # === Configuration ===
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # === Security ===
    "cryptography>=42.0.0",

    # === CLI ===
    "click>=8.1.0",
    "rich>=13.0.0",

    # === Visualization ===
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",

    # === Logging & Audit ===
    "structlog>=24.0.0",
    "python-json-logger>=2.0.0",

    # === Utilities ===
    "tqdm>=4.66.0",
    "python-dateutil>=2.8.0",
    "joblib>=1.3.0",

    # === SEC EDGAR Parsing ===
    "edgartools>=5.0.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

gpu = [
    "torch>=2.0.0+cu118",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing"
